# nui_coex_auv_2022

./: CMakeLists.txt  README.md  coex.repos  nui.rviz  package.xml
config/: nui_subsea_codec_config.yaml  nui_topside_codec_config.yaml  pi_receiver.yaml  pi_sender.yaml  quadtree.yaml  subsea_queue_monitor.yaml  tdma_node.yaml  topside_queue_monitor.yaml
data/: image_000248.tiff  image_000312.tiff  image_000444.tiff  image_000553.tiff  image_000927.tiff  image_001307.tiff  image_001609.tiff  image_001658.tiff  image_001714.tiff  image_001715.tiff  image_001716.tiff  image_001717.tiff  image_001738.tiff  image_001778.tiff  image_001782.tiff  image_001783.tiff  image_001784.tiff  image_001785.tiff
launch/: coexploration.launch  demo_coex.launch  progressive_imagery.launch  quadtree.launch  ros_acomms.launch
